# r2r-rag-search-agent

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  TESTING_REPORT.md  client.py  debug_fastmcp_headers.py  debug_headers.py  pyproject.toml  r2r_openapi_server.py  server.py  test_auth.py  test_mcp_call.py  test_mcp_tools.py  test_openapi_fix.py
